fix alignments

--- a/static/customer/myaccount.css
+++ b/static/customer/myaccount.css
@@ -75,7 +75,7 @@ body {
     margin-right: 101x;
     display: flex;
     flex-direction: row;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
     /* justify-content: space-between; */
 }
 
